--- a/src/sass/components/home.scss
+++ b/src/sass/components/home.scss
@@ -215,3 +215,12 @@ input.book {
     /* 23.91px */
     text-transform: capitalize;
 }
+
+.buttom-appointment-title {
+    color: #222F66;
+    font-family: 'PT Serif', serif;
+    font-size: 1.6667vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
