--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,5 +6,6 @@
 @import './components/header.scss';
 @import './components/navbar.scss';
 @import './components/home.scss';
+@import './components/footer.scss';
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
